--- a/themes/hello-friend-ng/assets/scss/_whatisdogecoin.scss
+++ b/themes/hello-friend-ng/assets/scss/_whatisdogecoin.scss
@@ -16,9 +16,8 @@
   .parent {
     position: relative;
     top: 0;
-    left: 7.5vw;
+    left: 5vw;
   }
-  
   .kabosu-content {
     width: 100vw !important;
     height: 100%;
@@ -42,7 +41,7 @@
     max-width: 20rem;
   }
   .parent-numbers {
-    height: 32vh;
+    height: 38vh;
     width: 100%;
     padding: 2rem !important;
   }
